force-app/main/default/objects/External_Attendee__c/fields/BD_Meeting__c.field-meta.xml
<CustomField>
    <fullName>BD_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Meeting</label>
    <referenceTo>BD_Meeting__c</referenceTo>
    <relationshipLabel>External Attendeess</relationshipLabel>
    <relationshipName>External_Attendeess</relationshipName>
    <type>Lookup</type>
</CustomField>