force-app/main/default/objects/External_Attendee__c/fields/External_Attendees__c.field-meta.xml
<CustomField>
    <fullName>External_Attendees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Attendees</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Attendeess</relationshipLabel>
    <relationshipName>External_Attendeess</relationshipName>
    <type>Lookup</type>
</CustomField>