force-app/main/default/objects/External_Attendee__c/fields/External_Attendees_User__c.field-meta.xml
<CustomField>
    <fullName>External_Attendees_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Attendees</label>
    <referenceTo>User</referenceTo>
    <relationshipName>External_Attendeess</relationshipName>
    <type>Lookup</type>
</CustomField>